# psqlpy-vs-psycopg

./: LICENSE  README.md  bench_psqlpy.py  bench_psycopg.py  docker-compose.yml  main.py  pyproject.toml  setting.py  shared.py
