[tool.poetry]
name = "psqlpy-vs-psycopg"
version = "0.1.0"
description = "benchmark between psqlpy and psycopg"
authors = ["Bima Adi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psqlpy = "^0.7.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
faker = "^26.0.0"
polars = "^0.20.31"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
